--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^7.0.2",
     "sass-loader": "^13.2.0",
     "select2": "^4.0.13",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
